// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store renders when filtered 1`] = `
<button
  class="filtered"
  title="Click to remove filter"
  value="fat"
>
  <span
    class="undefined"
  >
    <span
      style="width:1em;height:1em;margin:0 .05em 0 .1em;vertical-align:-0.1em"
    >
      🍩
    </span>
  </span>
  <span
    class="tag-name"
  >
    fat
  </span>
</button>
`;

exports[`Store renders without crashing 1`] = `
<button
  class=""
  title="Click to filter by tag"
  value="fat"
>
  <span
    class="undefined"
  >
    <span
      style="width:1em;height:1em;margin:0 .05em 0 .1em;vertical-align:-0.1em"
    >
      🍩
    </span>
  </span>
  <span
    class="tag-name"
  >
    fat
  </span>
</button>
`;
